# L-Sweeps-2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lsweeps-doc.doxy  main.cpp
LICENSES/: LICENSE.md
include/: Assembler.h  AssemblerHelmholtz.h  AssemblerHelmholtz2DFD.h  DD.h  DDCheckerboard.h  FiniteDifferences.h  Function.h  FunctionCSV.h  FunctionConstant.h  GlobalIterativeSolver.h  GlobalIterativeSolverGMRES.h  Input.h  LocalLinearSolver.h  LocalLinearSolverEigenSparseLU.h  LocalLinearSolverPardiso.h  Output.h  OutputVTK.h  PML.h  PMLCubic2D.h  Problem.h  RHS.h  RHSSrcPts.h  Subdomain.h  SubdomainStructured.h  typedef.h  utils.h
src/: AssemblerHelmholtz.cpp  AssemblerHelmholtz2DFD.cpp  DDCheckerboard.cpp  FiniteDifferences.cpp  Function.cpp  FunctionCSV.cpp  FunctionConstant.cpp  GlobalIterativeSolver.cpp  GlobalIterativeSolverGMRES.cpp  Input.cpp  LocalLinearSolverEigenSparseLU.cpp  LocalLinearSolverPardiso.cpp  Output.cpp  OutputVTK.cpp  PML.cpp  PMLCubic2D.cpp  Problem.cpp  RHS.cpp  RHSSrcPts.cpp  SubdomainStructured.cpp  utils.cpp
